<?xml version="1.0"?>
<package format="2">
  <name>camera-direction-determinator</name>
  <version>0.0.0</version>
  <description>The camera-direction-determinator package</description>

  <maintainer email="fukatsuren88@gmail.com">RenFukatsu</maintainer>
  <license>MIT</license>
  <author email="fukatsuren88@gmail.com">RenFukatsu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>color_detector_msgs</depend>
  <depend>color_detector_params</depend>
  <depend>dynamixel_angle_msgs</depend>
  <depend>kalman-filter</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roscpp</depend>


  <export>
  </export>
</package>
